Thu Nov 20 17:11:19 UTC 2014  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/TransportClient.cpp:
        * dds/DCPS/transport/framework/TransportConfig.h:
        * dds/DCPS/transport/framework/TransportConfig.cpp:

          If the passive_connect_duration_ is set to 0, treat it as the
          default value of 60 seconds.  With the async_assoc changes,
          0 will cause the timer to expire immediately and fail the association.

Wed Nov 19 19:16:30 UTC 2014  Adam Mitz  <mitza@ociweb.com>

        * Merged the branch async_assoc which lets the association process,
          which sets up communication channels from matched writers to readers,
          proceed without blocking the thread that initiated it (discovery).
          This helps scalability, especially with RTPS's peer-to-peer discovery
          where each participant is processing associations on its own.
          For details see the branch-specific change log at
          docs/history/ChangeLog-async_assoc.

Fri Nov 14 21:07:29 UTC 2014  Paul Calabrese  <calabrese_p@ociweb.com>

        * DDS_TAOv2.mwc:
        * DDS_TAOv2_all.mwc:

          Add some more missing libs to DDS_TAOv2.mwc.  Order and
          clean up both of these files.

Fri Nov 14 17:10:13 UTC 2014  Paul Calabrese  <calabrese_p@ociweb.com>

        * DDS_TAOv2.mwc:

          Add TAO CSD libraries to this workspace file.

Thu Nov 13 17:59:51 UTC 2014  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/DCPS/DomainParticipantImpl.cpp:

          Fix an infinite loop when the InfoRepo throws an exception
          from remove_topic().

Thu Nov 13 16:03:35 UTC 2014  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/LargeSample/Writer.h:
        * tests/DCPS/LargeSample/Writer.cpp:

          Fixed a warning and corrected ACE_DEBUG varargs error.

Tue Nov 11 19:03:42 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/Footprint:

          set svn:ignore
